force-app/main/default/objects/SurveyEmailSetting__mdt/SurveyEmailSetting__mdt.object-meta.xml
<CustomObject>
    <label>SurveyEmailSetting</label>
    <pluralLabel>SurveyEmailSettings</pluralLabel>
</CustomObject>