force-app/main/default/objects/SurveyEmailSetting__mdt/fields/SaveAsActivity__c.field-meta.xml
<CustomField>
    <fullName>SaveAsActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save As Activity</label>
    <type>Checkbox</type>
</CustomField>