force-app/main/default/objects/SurveyEmailSetting__mdt/fields/SenderEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>SenderEmailAddress__c</fullName>
    <label>Sender Email Address</label>
    <type>Email</type>
</CustomField>