force-app/main/default/objects/SurveyEmailSetting__mdt/fields/SurveyTemplateAPIName__c.field-meta.xml
<CustomField>
    <fullName>SurveyTemplateAPIName__c</fullName>
    <label>Survey Template API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>